<resources>
    <string name="app_name" translatable="false">Linksy</string>
    <string name="select_language_title">Select the translation language:</string>
    <string name="next">Continue</string>
    <string name="sign_up_title">Sign up</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string-array name="languages_array" translatable="false">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string name="sign_up_button">Sign up</string>
    <string name="login_button">Login</string>
    <string name="question_have_an_account">Already have an account?</string>
    <string name="login_title">Login</string>
    <string name="checkbox_remember_me">Remember me</string>
    <string name="link_forgot_password">Forgot password?</string>
    <string name="button_create_account">Create account</string>
    <string name="password_recovery_title">Password Recovery</string>
    <string name="button_continue">Continue</string>
    <string name="button_back">Back</string>


</resources>