<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context=".RegistrationFragment">

<com.google.android.material.textview.MaterialTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sign_up"
  style="@style/TextTitleStyle"
  >
</com.google.android.material.textview.MaterialTextView>

    <EditText
        android:layout_marginTop="20dp"
        style="@style/EditTextStyle"
        android:hint="@string/hint_username">
    </EditText>

    <EditText
        android:layout_marginTop="10dp"
        style="@style/EditTextStyle"
        android:hint="@string/hint_email">

    </EditText>
    <EditText
        android:layout_marginTop="10dp"
        style="@style/EditTextStyle"
        android:hint="@string/hint_password">

    </EditText>
    <EditText
        android:layout_marginTop="10dp"
        style="@style/EditTextStyle"
        android:hint="@string/hint_confirm_password">
    </EditText>
</LinearLayout>