<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegistrationFragment">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_recovery_title"
        style="@style/TextTitleStyle">
    </com.google.android.material.textview.MaterialTextView>


    <EditText
        android:id="@+id/et_email"
        android:layout_marginTop="20dp"
        style="@style/EditTextStyle"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email">
    </EditText>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"

        android:text="@string/button_continue">

    </com.google.android.material.button.MaterialButton>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>